--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -153,7 +153,7 @@ list=Array[Dictionary]([{
 "class": &"OptionsUI",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Scripts/OptionsUI.gd"
+"path": "res://Scripts/UI/OptionsUI.gd"
 }, {
 "base": &"Node2D",
 "class": &"PhantomCamera2D",
