--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Prefabs/UI/recipeTemplate.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/Custom/UI/", "res://Prefabs/", "res://Prefabs/UI/", "res://Prefabs/Counters/", "res://DataResources/KitchenObjectRES/", "res://DataResources/FryingRecipeRES/", "res://Assets/_Assets/", "res://addons/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/UI/PlateIconsUI.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/UI/", "res://Scripts/Custom/UI/", "res://Prefabs/UI/", "res://Prefabs/Counters/", "res://DataResources/KitchenObjectRES/", "res://DataResources/FryingRecipeRES/", "res://Assets/_Assets/", "res://addons/")
 dock_split_4=0
 dock_split_1=0
 dock_5="Inspector,Node"
@@ -38,8 +38,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://Scripts/UI/GameStartCountdownUI.gd"]
+selected_script="res://Scripts/UI/GameStartCountdownUI.gd"
 open_help=[]
 script_split_offset=213
 list_split_offset=0
