refactor naming and project layout part2

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/UI/PlateIconsUI.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/UI/", "res://Scripts/Custom/UI/", "res://Prefabs/UI/", "res://Prefabs/Counters/", "res://DataResources/KitchenObjectRES/", "res://DataResources/FryingRecipeRES/", "res://Assets/_Assets/", "res://addons/")
+dock_filesystem_selected_paths=PackedStringArray("res://Prefabs/player.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scripts/", "res://Scripts/Custom/", "res://Prefabs/", "res://Assets/", "res://Assets/_Assets/", "res://Assets/_Assets/PrefabsVisuals/", "res://Assets/_Assets/Materials/", "res://Assets/_Assets/Animations/", "res://addons/", "res://addons/phantom_camera/", "res://addons/phantom_camera/examples/", "res://addons/phantom_camera/examples/scripts/", "res://addons/phantom_camera/examples/scripts/3D/", "res://addons/phantom_camera/examples/scripts/2D/", "res://addons/phantom_camera/examples/resources/", "res://addons/phantom_camera/examples/resources/tween/")
 dock_split_4=0
 dock_split_1=0
 dock_5="Inspector,Node"
@@ -29,17 +29,17 @@ dock_8="FileSystem"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/MainMenu.tscn", "res://Scenes/Game.tscn", "res://Prefabs/Counters/StoveCounter.tscn", "res://Prefabs/UI/recipeTemplate.tscn")
-current_scene="res://Scenes/Game.tscn"
+open_scenes=PackedStringArray("res://Scenes/MainMenu.tscn", "res://Scenes/Game.tscn", "res://Prefabs/player.tscn")
+current_scene="res://Prefabs/player.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/UI/GameStartCountdownUI.gd"]
-selected_script="res://Scripts/UI/GameStartCountdownUI.gd"
+open_scripts=["res://Scripts/UI/GameStartCountdownUI.gd", "res://Scripts/MusicManager.gd"]
+selected_script="res://Scripts/MusicManager.gd"
 open_help=[]
 script_split_offset=213
 list_split_offset=0
@@ -52,8 +52,8 @@ selected_shader="res://Shaders/MovingVisual.tres"
 
 [editor_log]
 
-log_filter_0=false
-log_filter_2=false
+log_filter_0=true
+log_filter_2=true
 log_filter_1=false
 log_filter_3=true
 log_filter_4=true
