--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,7 +20,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://Prefabs/player.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scripts/", "res://Scripts/Custom/", "res://Prefabs/", "res://Assets/", "res://Assets/_Assets/", "res://Assets/_Assets/PrefabsVisuals/", "res://Assets/_Assets/Materials/", "res://Assets/_Assets/Animations/", "res://addons/", "res://addons/phantom_camera/", "res://addons/phantom_camera/examples/", "res://addons/phantom_camera/examples/scripts/", "res://addons/phantom_camera/examples/scripts/3D/", "res://addons/phantom_camera/examples/scripts/2D/", "res://addons/phantom_camera/examples/resources/", "res://addons/phantom_camera/examples/resources/tween/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scripts/Custom/", "res://Prefabs/", "res://Assets/", "res://Assets/_Assets/", "res://Assets/_Assets/PrefabsVisuals/", "res://Assets/_Assets/Materials/", "res://Assets/_Assets/Animations/", "res://addons/", "res://addons/phantom_camera/", "res://addons/phantom_camera/examples/", "res://addons/phantom_camera/examples/scripts/", "res://addons/phantom_camera/examples/scripts/3D/", "res://addons/phantom_camera/examples/scripts/2D/", "res://addons/phantom_camera/examples/resources/", "res://addons/phantom_camera/examples/resources/tween/")
 dock_split_4=0
 dock_split_1=0
 dock_5="Inspector,Node"
@@ -38,8 +38,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/UI/GameStartCountdownUI.gd", "res://Scripts/MusicManager.gd"]
-selected_script="res://Scripts/MusicManager.gd"
+open_scripts=["res://Scripts/UI/GameStartCountdownUI.gd", "res://Scripts/MusicManager.gd", "res://Scripts/Player.gd"]
+selected_script="res://Scripts/Player.gd"
 open_help=[]
 script_split_offset=213
 list_split_offset=0
