--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -4,7 +4,7 @@ state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
 "column": 0,
-"folded_lines": Array[int]([42, 51, 58]),
+"folded_lines": Array[int]([51]),
 "h_scroll_position": 0,
 "row": 24,
 "scroll_position": 12.0,
@@ -351,7 +351,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 26,
-"scroll_position": 1.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
